Remove source-map deps

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "css",
-  "version": "3.0.0",
+  "name": "@cronocode/css",
+  "version": "1.0.0",
   "description": "CSS parser / stringifier",
   "main": "index",
   "files": [
@@ -9,9 +9,7 @@
     "Readme.md"
   ],
   "dependencies": {
-    "inherits": "^2.0.4",
-    "source-map": "^0.6.1",
-    "source-map-resolve": "^0.6.0"
+    "inherits": "^2.0.4"
   },
   "devDependencies": {
     "mocha": "^8.0.1",
